# django-speedinfo

./: .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  runtests.py  setup.py
speedinfo/: __init__.py  admin.py  apps.py  backends.py  conf.py  managers.py  middleware.py  models.py  profiler.py  proxy.py  settings.py  utils.py
speedinfo/conditions/: __init__.py  base.py  dispatcher.py  exclude_urls.py
speedinfo/migrations/: 0001_initial.py  0002_auto_20171009_1219.py  0003_auto_20171023_1722.py  0004_auto_20180409_1416.py  0005_auto_20180417_1941.py
speedinfo/static/speedinfo/css/: admin.css
speedinfo/static/speedinfo/js/: jquery.fixed-table-header.js
speedinfo/storage/: base.py
speedinfo/storage/cache/: storage.py
speedinfo/storage/database/: models.py  storage.py
speedinfo/storage/database/migrations/: 0001_initial.py
speedinfo/templates/admin/speedinfo/: change_list.html
tests/: settings.py  test_admin.py  test_apps.py  test_conditions.py  test_middleware.py  test_models.py  test_profiler.py  test_settings.py  test_storage.py  tests.py  urls.py  views.py
