[tool.poetry]
name = "django-speedinfo"
version = "2.0.1"
description = "Live profiling tool for Django framework to measure views performance"
authors = ["Evgeniy Krysanov <evgeniy.krysanov@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/catcombo/django-speedinfo"
keywords = ["django", "profiler", "views", "metrics", "monitoring"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.8",
    "Framework :: Django :: 1.9",
    "Framework :: Django :: 1.10",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
packages = [
    { include = "speedinfo" },
]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*"

[tool.poetry.dev-dependencies]
django = "~1.8"
flake8 = "^3.7"
flake8-quotes = "^2.1"
flake8-commas = "^2"
flake8-import-order = "^0.18"
mock = { version = "^3.0", python = "^2.7" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
